--- a/Cafe.Web/src/app/app.component.html
+++ b/Cafe.Web/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-main-banner></app-main-banner>
-<app-about-us></app-about-us>
-<app-menu></app-menu>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
