--- a/Cafe.Web/src/app/components/navbar/navbar.component.html
+++ b/Cafe.Web/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/faq">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Feedback</a>
+            <a class="nav-link" href="/feedbacks">Feedback</a>
           </li>
         </ul>
         <div class="d-flex align-items-center">
