--- a/Cafe.Web/src/app/pages/account/account.component.css
+++ b/Cafe.Web/src/app/pages/account/account.component.css
@@ -1,7 +1,7 @@
 /* Основной стиль контейнера */
 .account-container {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 150px auto;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 8px;
