--- a/Cafe.Web/src/app/pages/auth/login/login.component.css
+++ b/Cafe.Web/src/app/pages/auth/login/login.component.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     max-width: 400px;
-    margin: 0 auto;
+    margin: 150px auto;
   
     h2 {
       text-align: center;
