--- a/Cafe.Web/src/app/components/navbar/navbar.component.html
+++ b/Cafe.Web/src/app/components/navbar/navbar.component.html
@@ -15,18 +15,19 @@
           <li class="nav-item">
             <a class="nav-link" href="/feedbacks">Feedback</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users">Users</a>
+          </li>
         </ul>
         <div class="d-flex align-items-center">
-            <!-- Для незарегистрированных пользователей -->
             <div *ngIf="!isAuthenticated" class="d-flex">
               <button class="btn btn-outline-light me-2" onclick="location.href='/login'">Login</button>
               <button class="btn btn-outline-secondary" onclick="location.href='/sign-up'">Register</button>
             </div>
-          
-            <!-- Для зарегистрированных пользователей -->
+
             <div *ngIf="isAuthenticated" class="d-flex align-items-center">
               <button class="btn btn-outline-light me-2" onclick="location.href='/account'">
-                <i class="bi bi-person-circle">profile</i> <!-- Иконка аккаунта -->
+                <i class="bi bi-person-circle">profile</i>
               </button>
               <button class="btn btn-outline-danger" (click)="logout()">Logout</button>
             </div>
